--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,27 @@
 .externalNativeBuild
 .cxx
 local.properties
+/app/src/main/java/
+/app/src/androidTest/java/
+/app/src/test/java/
+/app/src/main/res/
+/app/
+/app/src/main/res/drawable/
+/app/src/main/res/layout/
+/app/src/main/res/mipmap-hdpi/
+/app/src/main/res/mipmap-mdpi/
+/app/src/main/res/mipmap-xhdpi/
+/app/src/main/res/mipmap-xxhdpi/
+/app/src/main/res/mipmap-xxxhdpi/
+/app/src/main/res/mipmap-anydpi-v26/
+/app/src/main/res/values/
+/app/src/main/res/values-night/
+/app/src/main/res/xml/
+/build.gradle.kts
+/app/build.gradle.kts
+/app/proguard-rules.pro
+/gradle.properties
+/gradle/wrapper/gradle-wrapper.properties
+/gradle/libs.versions.toml
+/local.properties
+/settings.gradle.kts
